@@ -1,3 +1,7 @@
+trunk
+=====
+* added mxOption() for "Analytic Gradients" with possible values "Yes"/"No"
+
 Release 1.2.0-1926 (February 04, 2012)
 ======================================
 * new interface such that 'objective@info$expMean', 'objective@info$expCov'
